<resources>
    <string name="app_name">Santander</string>
    <string name="logo_text">Santander</string>
    <string name="location">Location</string>
    <string name="forgotten_password_text"><u>Esqueci minha senha</u></string>
    <string name="password_edit_text_placeholder">Senha</string>
    <string name="login_button_text">Entrar</string>
    <string name="menu">Menu</string>
    <string name="cpf_edit_text_placeholder">CPF</string>
    <string name="access_account_label">Acessar sua conta:</string>
    <string name="save_cpf_label">Lembrar meu CPF</string>
    <string name="save_password_label">Esqueci minha senha</string>
    <string name="help_button_text">Ajuda</string>
    <string name="santander_id_button_text">ID Santander</string>
    <string name="access_account_button_text">Acessar sua\nconta</string>
    <string name="pay_swap_button_text">Pagar ou cobrar</string>
    <string name="banking_credentials_text">Ag 1234, Cc 01234567-8</string>
    <string name="greeting_text">Olá, Humberto</string>
    <string name="username">Humberto</string>
    <string-array name="complete_plan_description">
        <item>Cobertura nacional</item>
        <item>Emergência 24h</item>
        <item>Reembolso de até R$ 500</item>
        <item>Acomodação hospitalar individual</item>
        <item>Coleta domiciliar</item>
        <item>Terapias complementares</item>
        <item>Telemedicina</item>
        <item>Descontos em farmácia</item>
    </string-array>
    <string-array name="intermediate_plan_description">
        <item>Cobertura nacional</item>
        <item>Emergência 24h</item>
        <item>Reembolso de até R$ 250</item>
        <item>Acomodação hospitalar coletiva</item>
        <item>Coleta domiciliar</item>
        <item>Telemedicina</item>
        <item>Descontos em farmácia</item>
    </string-array>
    <string-array name="basic_plan_description">
        <item>Cobertura nacional</item>
        <item>Emergência 24h</item>
        <item>Reembolso de até R$ 95</item>
        <item>Acomodação hospitalar coletiva</item>
        <item>Telemedicina</item>
        <item>Descontos em farmácia</item>
    </string-array>
    <string name="modify"><u>Alterar</u></string>
    <string name="address_example">Av. Paulista, 1333 - Bela Vista, São Paulo - SP, 01311-000, Brasil</string>
</resources>